tests/cases/fail/dict_unsupported_key_type.p4
def main() -> None:
    data: dict[float, str] = {}
